--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "vue3-float-label",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
+  "author" : "Justin Moreland",
+  "license": "MIT",
   "files": [
-    "dist"
+    "dist/*",
+    "main.js"
   ],
   "main": "./dist/vue3-float-label.umd.cjs",
   "module": "./dist/vue3-float-label.js",
@@ -17,15 +20,15 @@
   },
   "scripts": {
     "dev": "vite",
+    "watch": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "core-js": "^3.24.1",
-    "vue": "^3.2.37"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
-    "vite": "^3.0.7"
+    "vite": "^3.0.7",
+    "vue": "^3.2.37"
   }
 }
