--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "author" : "Justin Moreland",
   "license": "MIT",
   "files": [
-    "dist/*",
-    "main.js"
+    "dist",
   ],
   "main": "./dist/vue3-float-label.umd.cjs",
   "module": "./dist/vue3-float-label.js",
@@ -25,10 +24,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "vue": "^3.2.37"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
-    "vite": "^3.0.7",
-    "vue": "^3.2.37"
+    "vite": "^3.0.7"
   }
 }
