--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "type": "module",
   "author" : "Justin Moreland",
   "license": "MIT",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist/*"],
   "main": "./dist/vue3-float-label.umd.cjs",
   "module": "./dist/vue3-float-label.js",
   "exports": {
