--- a/package.json
+++ b/package.json
@@ -1,30 +1,41 @@
 {
   "name": "vue3-float-label",
-  "private": true,
-  "version": "0.0.3",
+  "version": "0.0.4",
+  "description": "A Vue 3 component for float labels.",
   "type": "module",
   "author": "Justin Moreland",
-  "license": "MIT",
-  "files": [
-    "dist"
+  "keywords": [
+    "vue",
+    "vue 3",
+    "float-label",
+    "component"
   ],
-  "main": "./dist/vue3-float-label.umd.cjs",
-  "module": "./dist/vue3-float-label.js",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jwmoreland/vue3-float-label.git"
+  },
+  "files": [
+    "dist",
+    "dist/style.css"
+  ],
+  "main": "dist/vue3-float-label.umd.js",
+  "module": "dist/vue3-float-label.es.js",
   "exports": {
     ".": {
-      "import": "./dist/vue3-float-label.js",
-      "require": "./dist/vue3-float-label.umd.cjs"
+      "import": "./dist/vue3-float-label.es.js",
+      "require": "./dist/vue3-float-label.umd.js"
     },
-    "./dist/style.css": "./dist/style.css"
+    "./style.css": "./dist/style.css"
   },
   "scripts": {
     "dev": "vite",
     "watch": "vite",
-    "build": "vite build",
+    "build": "vite build && cp src/style.css dist/style.css",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.0"
+    "vue": "^3.5.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
