--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-float-label",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A Vue 3 component for float labels.",
   "type": "module",
   "author": "Justin Moreland",
@@ -34,11 +34,11 @@
     "build": "vite build && cp src/style.css dist/style.css",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "vue": "^3.5.13"
-  },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "vite": "^6.0.7"
+  },
+  "peerDependencies": {
+    "vue": "^3.5.13"
   }
 }
